--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,9 +1,9 @@
 header {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    height: 150px;
+    right: 60px;
+    height: 50px;
     z-index: 10;
     &::before {
         content: "";
@@ -12,14 +12,14 @@ header {
         left: 0;
         bottom: 0;
         right: 0;
-        background: linear-gradient(180deg, rgba($colorBlack, 0.46) 0%, rgba(2, 0, 36, 0) 37%);
+        background: linear-gradient(180deg, rgba($colorBlack, 0.46) 0%, rgba($colorBlack, 0) 70%);
         pointer-events: none;
     }
 }
 .menu-header {
     &__list {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
     }
 
     &__link {
