mobileMenu: layout done, js done

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -107,8 +107,17 @@
     }
 }
 
+
+//миксин для реакции на ховер 
 @mixin mediaHover {
     @media (any-hover: hover) {
+        @content;
+    }
+}
+
+// мискин для реакции на тачскрин
+@mixin mediaTouch {
+    @media (any-pointer: coarse) {
         @content;
     }
 }
