--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -32,6 +32,9 @@
         margin-bottom: 45px;
         font-size: 25px;
         font-family: $boldFont;
+        @media (max-width: $md) {
+            text-align: center;
+        }
     }
     &__menu {
         display: flex;
@@ -78,7 +81,7 @@
     @media (max-width: $md) {
         display: flex;
         justify-content: center;
-        
+        align-items: center;
     }
     &__list {
         padding: 0 0 0 10px;
@@ -119,7 +122,7 @@
 .connect-footer {
     display: flex;
     flex-direction: column;
-    @media (max-width: $lg) {
+    @media (max-width: $md) {
         order: -1;
     }
 
@@ -129,13 +132,16 @@
         &_content_messengers {
             justify-content: center;
         }
+        @media (max-width: $md) {
+            justify-content: center;
+        }
     }
 
     &__icon {
         font-size: 60px;
-        @media (max-width: $lg) {
-            font-size: 40px;
-        }
+        // @media (max-width: $lg) {
+        //     font-size: 40px;
+        // }
     }
     &__text {
         margin: 0 0 0 15px;
