--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,38 +1,231 @@
-header {
-    position: absolute;
-    top: 0;
+.header {
+    position: fixed;
     left: 0;
-    right: 60px;
-    height: 50px;
+    // top: -100%;
+    right: var(--hero-bar-width);
+    padding: 0 20px 0 20px;
     z-index: 10;
+    transition: top 0.4s ease;
+    @media (max-width: $md) {
+        position: fixed;
+        right: 0;
+    }
+
+    &._show {
+        position: fixed;
+        top: 0;
+    }
+
     &::before {
         content: "";
         position: absolute;
-        top: 0;
         left: 0;
-        bottom: 0;
-        right: 0;
-        background: linear-gradient(180deg, rgba($colorBlack, 0.46) 0%, rgba($colorBlack, 0) 70%);
-        pointer-events: none;
-    }
-}
-.menu-header {
-    &__list {
-        display: flex;
-        justify-content: space-around;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba($colorWhite, 0.85);
     }
 
-    &__link {
-        color: $colorWhite;
-        text-decoration: none;
-        line-height: 50px;
-        font-size: 20px;
-        transition: color 0.3s ease-in;
+    &__body {
+        z-index: 2;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        height: var(--header-heigth);
+    }
+
+    &__logo {
+        width: 90px;
+        display: block;
+        @media (max-width: $md) {
+            z-index: 5;
+        }
+        img {
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
+    &__list {
+        & > li {
+            position: relative;
+            margin: 0 0 0 20px;
+        }
         @include mediaHover {
-            &:hover {
-                color: $accent;
-                font-weight: bold;
+            & > li:hover {
+                .menu-sublist {
+                    opacity: 1;
+                    visibility: visible;
+                    transform: translate(0px, 0px);
+                    pointer-events: all;
+                }
+                .submenu-arrow {
+                    &::after {
+                        transform: rotate(180deg);
+                    }
+                }
+            }
+        }
+
+        @media (min-width: $mdm) {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+
+            & > li {
+                padding: 10px 0;
+            }
+        }
+
+        @media (max-width: $md) {
+            &::before {
+                content: "";
+                position: fixed;
+                width: 100%;
+                top: 0;
+                left: 0;
+                height: var(--header-heigth);
+                background: $colorWhite;
+                z-index: 2;
+            }
+
+            & > li {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                font-size: 24px;
+                margin-bottom: 20px;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+        li {
+            &:not(:last-child) {
+                margin-right: 20px;
             }
         }
     }
+    &__link {
+        color: $colorBlack;
+        text-decoration: none;
+    }
+    &__burger {
+        display: none;
+        font-size: 36px;
+        color: $colorBlack;
+        @media (max-width: $md) {
+            display: block;
+            z-index: 5;
+            cursor: pointer;
+        }
+    }
+
+    &__menu {
+        flex: 1 1;
+        @media (max-width: $md) {
+            position: fixed;
+            top: 0;
+            left: -100%;
+            width: 100vw;
+            height: 100%;
+            background: $colorWhite;
+            padding: 100px 30px 30px 30px;
+            overflow: auto;
+            transition: left 0.3s ease-in;
+
+            &._active {
+                left: 0;
+            }
+        }
+    }
+}
+
+.menu-sublist {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    min-width: 200px;
+    background: $colorWhite;
+    padding: 10px;
+
+    @media (min-width: $mdm) {
+        transform: translate(0px, 10%);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: all 0.3s ease 0s;
+    }
+    @media (max-width: $md) {
+        position: relative;
+        background: $colorBlack;
+        flex: 1 1 100%;
+        display: none;
+    }
+    & > li {
+        &:not(:last-child) {
+            margin: 0 0 10px 0;
+        }
+    }
+    &__link {
+        text-decoration: none;
+        color: $colorBlack;
+        &:hover {
+            text-decoration: underline;
+        }
+        @media (max-width: $md) {
+            font-size: 24px;
+            color: $colorWhite;
+        }
+    }
+}
+.submenu-arrow {
+    position: relative;
+    padding: 0 20px 0 0;
+
+    &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 3px;
+        font-family: "icomoon";
+        background: url("../img/chevrone-down.svg") center center / cover no-repeat;
+        width: 16px;
+        height: 16px;
+        transition: transform 0.3s ease-in;
+    }
+}
+// поведение на тачскрине
+
+body._touch {
+    .header__list > li._active {
+        @media (min-width: $mdm) {
+            .menu-sublist {
+                opacity: 1;
+                visibility: visible;
+                transform: translate(0px, 0px);
+                pointer-events: all;
+            }
+            .submenu-arrow {
+                &::after {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+        @media (max-width: $md) {
+            .menu-sublist {
+                display: block;
+            }
+            .submenu-arrow {
+                &::after {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+    }
+}
+._scroll-lock {
+    overflow: hidden;
 }
