contactsSection: main layout, Modal added

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -20,6 +20,12 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+._icon-clock:before {
+    content: "\e90d";
+}
+._icon-mappin:before {
+    content: "\e90e";
+}
 ._icon-menu:before {
     content: "\e90b";
 }
