--- a/src/scss/blocks/_all.scss
+++ b/src/scss/blocks/_all.scss
@@ -1,7 +1,9 @@
+@import './modals';
 @import './header';
 @import './hero';
 @import './services';
 @import './feedback';
 @import './main-contacts';
+@import './contacts';
 @import './faq';
 @import './footer';
