--- a/src/scss/blocks/_modals.scss
+++ b/src/scss/blocks/_modals.scss
@@ -13,6 +13,11 @@
     font-family: $mainFont;
     visibility: hidden;
     opacity: 0;
+    color: $colorBlack;
+    &__title {
+        font-size: 24px;
+        font-family: $boldFont;
+    }
 
     &.modal__open {
         opacity: 1;
@@ -29,8 +34,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 30px 20px;
-        max-width: 500px;
+        padding: 20px;
+        max-width: 90vw;
         background-color: $colorWhite;
         border-radius: 7px;
         box-shadow: 5px 6px 10px 6px rgba(0, 0, 0, 0.25);
@@ -43,12 +48,13 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
     &__close {
         cursor: pointer;
         display: inline-block;
-        padding: 0 0 5px 5px;
+        border: none;
+        font-size: 24px;
     }
 }
 
@@ -72,7 +78,6 @@
         border-left: 5px solid brown;
     }
 }
-
 
 .visible {
     display: block;
